Update README with formatting and additional sections